[package]
name = "gpx_to_map"
version = "0.1.0"
authors = ["Yoshiyuki Saitou <saitou@gyafuuuun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpx = "0.8.1"
anyhow = "1.0.32"
chrono = { version = "0.4", features = ["serde"] }
globalmaptiles-rs = "0.1.6"
